# ClockworkTick

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DEVLOG.md  Makefile  clockwork_tests  clockwork_tests[1]_include.cmake  clockwork_tests[1]_tests.cmake  cmake_install.cmake  cmake_test_discovery_19b2a30c09.json
Testing/Temporary/: CTestCostData.txt
src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
tests/: CTestTestfile.cmake  Makefile  clockwork_tests.cc  cmake_install.cmake
